fix dialog layout on iOS 9+iPhone 5, time and date on separate lines

--- a/ff.css
+++ b/ff.css
@@ -144,7 +144,7 @@ h1, h2, h3, p {
         top: 0px;
         background-color: white;
         height: 100vh;
-        width: 100vw;
+        width: 100%;
         z-index: 10;
         overflow-x: hidden;
     }
